--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.3.0",
     "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
+    "axios-jsonp": "^1.0.2",
     "downshift": "^3.2.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
